# internal/app/http/docs/swagger.yaml
@@ -128,6 +128,9 @@ definitions:
       deadline_at:
         format: date-time
         type: string
+      expires_at:
+        format: date-time
+        type: string
       invited_at:
         format: date-time
         type: string
@@ -135,6 +138,9 @@ definitions:
         type: string
       next_action:
         type: string
+      position:
+        minimum: 1
+        type: integer
       position_ahead:
         type: integer
       product_id:
@@ -150,6 +156,9 @@ definitions:
       terminal_at:
         format: date-time
         type: string
+      total_waiting:
+        minimum: 0
+        type: integer
       updated_at:
         format: date-time
         type: string
